--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,3 +11,12 @@ body,
 html {
   height: 100%;
 }
+
+.legend {
+  padding: 6px 8px;
+  color: #555;
+  background: #fff;
+  background: rgba(255, 255, 255, 0.8);
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+}
